# trajectory_toolkit

./: .gitignore  CMakeLists.txt  CsvDataAcquisition.py  Listeners.py  Plotter.py  Quaternion.py  README.md  RosDataAcquisition.py  Tests.py  TimedData.py  Utils.py  VIEvaluator.py  example.py  package.xml  parseOdometryToFiles.py  rovio_evaluation.py  rovio_evaluation_old.py  setup.py  test.py
data/: example.bag
scripts/: example.py  parseOdometryToFiles.py  rovio_evaluation.py
src/trajectory_toolkit/: Plotter.py  Quaternion.py  RosDataAcquisition.py  Tests.py  TimedData.py  Utils.py
