<?xml version="1.0"?>
<package>
  <name>trajectory_toolkit</name>
  <version>0.0.0</version>
  <description>The trajectory_toolkit package</description>

  <author>bloeschm</author>
  <maintainer email="bloeschm@ethz.ch">bloeschm</maintainer>
  <license>BSD License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>